Add Class test #13