@@ -5,6 +5,9 @@ import es.upm.miw.apaw_practice.adapters.mongodb.Class.daos.CourseRepository;
 import es.upm.miw.apaw_practice.adapters.mongodb.Class.daos.LearnerRepository;
 import es.upm.miw.apaw_practice.adapters.mongodb.Class.daos.ProfessorRepository;
 import es.upm.miw.apaw_practice.adapters.mongodb.Class.entities.ClassEntity;
+import es.upm.miw.apaw_practice.adapters.mongodb.Class.entities.CourseEntity;
+import es.upm.miw.apaw_practice.adapters.mongodb.Class.entities.LearnerEntity;
+import es.upm.miw.apaw_practice.adapters.mongodb.Class.entities.ProfessorEntity;
 import es.upm.miw.apaw_practice.domain.models.Class.Class;
 import es.upm.miw.apaw_practice.domain.models.Class.Learner;
 import es.upm.miw.apaw_practice.domain.models.Class.Professor;
@@ -13,6 +16,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -34,51 +38,42 @@ public class ClassSeederService {
         LogManager.getLogger(this.getClass()).warn("------- Hotel Initial Load -----------");
 
         ClassEntity[] classEntities = {
-
+                new ClassEntity("class1",60, LocalDate.of(2021,11,11)),
+                new ClassEntity("class2",120,LocalDate.of(2021,9,6)),
+                new ClassEntity("class3",180,LocalDate.of(2021,10,10))
         };
 
-        HotelGuestEntity[] hotelGuests = {
-                new HotelGuestEntity(new HotelGuest("Mario", "88888888K", LocalDateTime.of(2015, 8, 10, 12, 30),
-                        LocalDateTime.of(2015, 8, 25, 15, 30))),
-                new HotelGuestEntity(new HotelGuest("Mario", "88888888K", LocalDateTime.of(2020, 6, 15, 9, 0),
-                        LocalDateTime.of(2018, 9, 16, 16, 0))),
-                new HotelGuestEntity(new HotelGuest("Pedro", "11111111S", LocalDateTime.of(2020, 6, 15, 9, 0),
-                        LocalDateTime.of(2018, 9, 16, 16, 0))),
-                new HotelGuestEntity(new HotelGuest("Luca", "56565656P", LocalDateTime.of(2020, 10, 6, 12, 0),
-                        LocalDateTime.of(2020, 10, 12, 18, 0)))
+        this.classRepository.saveAll(Arrays.asList(classEntities));
 
-        };
-        this.hotelGuestRepository.saveAll(Arrays.asList(hotelGuests));
-
-        RoomEntity[] rooms = {
-                new RoomEntity(22, new BigDecimal(45), false, List.of(hotelGuests[0], hotelGuests[1], hotelGuests[2])),
-                new RoomEntity(3, new BigDecimal(250), true, new ArrayList<>()),
-                new RoomEntity(45, new BigDecimal(120), true, List.of(hotelGuests[0])),
-                new RoomEntity(12, new BigDecimal(60), false, new ArrayList<>())
+        LearnerEntity[] learnerEntities = {
+                new LearnerEntity("wang",22,false),
+                new LearnerEntity("andres",25,false),
+                new LearnerEntity("jesus",21,true)
         };
 
-        HotelEntity[] hotels = {
-                new HotelEntity("MariaLuisa", "Av. Madrid, Madrid, 32452", 3, List.of(rooms[0])),
-                new HotelEntity("Estrella", "Av. Luto, 23981", 2, List.of(rooms[1])),
-                new HotelEntity("Gran hotel", "Av. Salamanca, Salamanca, 15243", 4, List.of(rooms[1], rooms[2], rooms[3]))
+        this.learnerRepository.saveAll(Arrays.asList(learnerEntities));
+
+        ProfessorEntity[] professorEntities = {
+                new ProfessorEntity("eva","espanol",59,LocalDate.of(2011,9,11)),
+                new ProfessorEntity("jose","china",55,LocalDate.of(2009,11,11)),
+                new ProfessorEntity("nick","web",39,LocalDate.of(2019,1,1))
         };
-        hotels[1].setId("1");
-        hotels[2].setId("2");
-        this.hotelRepository.saveAll(Arrays.asList(hotels));
 
-        DirectorEntity[] directors = {
-                new DirectorEntity("77777777V", "test@email.com", 222222222, List.of(hotels[0])),
-                new DirectorEntity("22222222P", "email@email.com", 999999999, List.of(hotels[1])),
-                new DirectorEntity("44444444L", "director@email.com", 222222222, List.of(hotels[2]))
+        this.professorRepository.saveAll(Arrays.asList(professorEntities));
+
+        CourseEntity[] courseEntities = {
+                new CourseEntity("espanol",6,20),
+                new CourseEntity("web",8,15),
+                new CourseEntity("china",4,8)
         };
-        this.directorRepository.saveAll(Arrays.asList(directors));
 
-
+        this.courseRepository.saveAll(Arrays.asList(courseEntities));
     }
 
     public void deleteAll() {
-        this.hotelRepository.deleteAll();
-        this.hotelGuestRepository.deleteAll();
-        this.directorRepository.deleteAll();
+        this.classRepository.deleteAll();
+        this.learnerRepository.deleteAll();
+        this.professorRepository.deleteAll();
+        this.courseRepository.deleteAll();
     }
 }
